improved RD accuracy and some clean up