@@ -37,6 +37,7 @@ import de.viadee.bpm.vPAV.config.model.Rule;
 import de.viadee.bpm.vPAV.config.model.Setting;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
 import de.viadee.bpm.vPAV.processing.code.flow.ControlFlowGraph;
+import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
 import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -64,152 +65,148 @@ import java.util.Map;
  */
 public class NoExpressionCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    private static NoExpressionChecker checker;
+	private static NoExpressionChecker checker;
 
-    private static ClassLoader cl;
+	private static ClassLoader cl;
 
-    private static Map<String, Setting> setting = new HashMap<String, Setting>();
+	private static Map<String, Setting> setting = new HashMap<String, Setting>();
 
-    private final Rule rule = new Rule("NoExpressionChecker", true, null, setting, null, null);
+	private final Rule rule = new Rule("NoExpressionChecker", true, null, setting, null, null);
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-    }
+	@BeforeClass
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+	}
 
-    /**
-     * Case: Tasks without Expressions
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testTaskWithoutExpression()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoExpressionChecker_WithoutExpressions.bpmn";
-        checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Tasks without Expressions
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testTaskWithoutExpression()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoExpressionChecker_WithoutExpressions.bpmn";
+		checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() > 0) {
-            Assert.fail("correct model generates an issue");
-        }
-    }
+		if (issues.size() > 0) {
+			Assert.fail("correct model generates an issue");
+		}
+	}
 
-    /**
-     * Case: Tasks with Expressions
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testTaskWithExpression()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoExpressionChecker_WithExpressions.bpmn";
-        checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Tasks with Expressions
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testTaskWithExpression()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoExpressionChecker_WithExpressions.bpmn";
+		checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() != 2) {
-            Assert.fail("correct model generates an issue");
-        }
-    }
+		if (issues.size() != 2) {
+			Assert.fail("correct model generates an issue");
+		}
+	}
 
-    /**
-     * Case: Events with Expressions
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testEventsWithExpression()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoExpressionChecker_EventsWithExpressions.bpmn";
-        checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Events with Expressions
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testEventsWithExpression()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoExpressionChecker_EventsWithExpressions.bpmn";
+		checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() != 3) {
-            Assert.fail("model should generate 3 issues");
-        }
-    }
+		if (issues.size() != 3) {
+			Assert.fail("model should generate 3 issues");
+		}
+	}
 
-    /**
-     * Case: Sequenceflow with Expressions
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testSequenceFlowWithExpression()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoExpressionChecker_SequenceFlowWithExpression.bpmn";
-        checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Sequenceflow with Expressions
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testSequenceFlowWithExpression()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoExpressionChecker_SequenceFlowWithExpression.bpmn";
+		checker = new NoExpressionChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() != 1) {
-            Assert.fail("model should generate 3 issues");
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("model should generate 3 issues");
+		}
+	}
 }
