@@ -38,6 +38,7 @@ import de.viadee.bpm.vPAV.config.model.Setting;
 import de.viadee.bpm.vPAV.processing.CheckName;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
 import de.viadee.bpm.vPAV.processing.code.flow.ControlFlowGraph;
+import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
 import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -64,220 +65,218 @@ import java.util.Map;
  */
 public class NoScriptCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    private static NoScriptChecker checker;
+	private static NoScriptChecker checker;
 
-    private static ClassLoader cl;
+	private static ClassLoader cl;
 
-    private static Map<String, Setting> setting = new HashMap<String, Setting>();
+	private static Map<String, Setting> setting = new HashMap<String, Setting>();
 
-    private final Rule rule = new Rule("NoScriptChecker", true, null, setting, null, null);
+	private final Rule rule = new Rule("NoScriptChecker", true, null, setting, null, null);
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-    }
+	@BeforeClass
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+	}
 
-    /**
-     * Case: BPMN with no Script
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithNoScript()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithoutScript.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: BPMN with no Script
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithNoScript()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithoutScript.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
 
-        final Collection<CheckerIssue> issues = checker.check(element);
+		final Collection<CheckerIssue> issues = checker.check(element);
 
-        if (issues.size() > 0) {
-            Assert.fail("correct model generates an issue");
-        }
-    }
+		if (issues.size() > 0) {
+			Assert.fail("correct model generates an issue");
+		}
+	}
 
-    /**
-     * Case: Model with an InputScript
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithInputScript()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithInputScript.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Model with an InputScript
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithInputScript()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithInputScript.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
-        final BaseElement baseElement = element.getBaseElement();
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
+		final BaseElement baseElement = element.getBaseElement();
 
-        final Collection<CheckerIssue> issues = checker.check(element);
+		final Collection<CheckerIssue> issues = checker.check(element);
 
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'inputParameter' script",
-                    issues.iterator().next().getMessage());
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("collection with the issues is bigger or smaller as expected");
+		} else {
+			Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'inputParameter' script",
+					issues.iterator().next().getMessage());
+		}
+	}
 
-    /**
-     * Case: Model with an OutputScript
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithOutputScript()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithOutputScript.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Model with an OutputScript
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithOutputScript()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithOutputScript.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ServiceTask> baseElements = modelInstance
-                .getModelElementsByType(ServiceTask.class);
+		final Collection<ServiceTask> baseElements = modelInstance.getModelElementsByType(ServiceTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
-        final BaseElement baseElement = element.getBaseElement();
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
+		final BaseElement baseElement = element.getBaseElement();
 
-        final Collection<CheckerIssue> issues = checker.check(element);
+		final Collection<CheckerIssue> issues = checker.check(element);
 
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'outputParameter' script",
-                    issues.iterator().next().getMessage());
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("collection with the issues is bigger or smaller as expected");
+		} else {
+			Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'outputParameter' script",
+					issues.iterator().next().getMessage());
+		}
+	}
 
-    /**
-     * Case: Model with an executionlistenerScript
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithExecutionlistenerScript()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithExecutionlistenerScript.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Model with an executionlistenerScript
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithExecutionlistenerScript()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithExecutionlistenerScript.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<Gateway> baseElementsGate = modelInstance
-                .getModelElementsByType(Gateway.class);
+		final Collection<Gateway> baseElementsGate = modelInstance.getModelElementsByType(Gateway.class);
 
-        final BpmnElement elementGate = new BpmnElement(PATH, baseElementsGate.iterator().next(), new ControlFlowGraph());
-        final BaseElement baseElementGate = elementGate.getBaseElement();
+		final BpmnElement elementGate = new BpmnElement(PATH, baseElementsGate.iterator().next(),
+				new ControlFlowGraph(), new FlowAnalysis());
+		final BaseElement baseElementGate = elementGate.getBaseElement();
 
-        Collection<CheckerIssue> issues = checker.check(elementGate);
+		Collection<CheckerIssue> issues = checker.check(elementGate);
 
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals(
-                    "Task '" + CheckName.checkName(baseElementGate) + "' with 'executionListener' script",
-                    issues.iterator().next().getMessage());
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("collection with the issues is bigger or smaller as expected");
+		} else {
+			Assert.assertEquals("Task '" + CheckName.checkName(baseElementGate) + "' with 'executionListener' script",
+					issues.iterator().next().getMessage());
+		}
+	}
 
-    /**
-     * Case: Model with a TasklistenerScript
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithTasklistenerScript()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithTasklistenerScript.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Model with a TasklistenerScript
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithTasklistenerScript()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithTasklistenerScript.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<UserTask> baseElements = modelInstance
-                .getModelElementsByType(UserTask.class);
+		final Collection<UserTask> baseElements = modelInstance.getModelElementsByType(UserTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
-        final BaseElement baseElement = element.getBaseElement();
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
+		final BaseElement baseElement = element.getBaseElement();
 
-        final Collection<CheckerIssue> issues = checker.check(element);
+		final Collection<CheckerIssue> issues = checker.check(element);
 
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'taskListener' script",
-                    issues.iterator().next().getMessage());
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("collection with the issues is bigger or smaller as expected");
+		} else {
+			Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with 'taskListener' script",
+					issues.iterator().next().getMessage());
+		}
+	}
 
-    /**
-     * Case: Model with a ScriptTask
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     * @throws XPathExpressionException
-     */
-    @Test
-    public void testModelWithScriptTask()
-            throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithScriptTask.bpmn";
-        checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Model with a ScriptTask
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 * @throws XPathExpressionException
+	 */
+	@Test
+	public void testModelWithScriptTask()
+			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "NoScriptCheckerTest_ModelWithScriptTask.bpmn";
+		checker = new NoScriptChecker(rule, new BpmnScanner(PATH));
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<ScriptTask> baseElements = modelInstance
-                .getModelElementsByType(ScriptTask.class);
+		final Collection<ScriptTask> baseElements = modelInstance.getModelElementsByType(ScriptTask.class);
 
-        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph());
-        final BaseElement baseElement = element.getBaseElement();
+		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+				new FlowAnalysis());
+		final BaseElement baseElement = element.getBaseElement();
 
-        final Collection<CheckerIssue> issues = checker.check(element);
+		final Collection<CheckerIssue> issues = checker.check(element);
 
-        if (issues.size() != 1) {
-            Assert.fail("collection with the issues is bigger or smaller as expected");
-        } else {
-            Assert.assertEquals(
-                    "ScriptTask '" + CheckName.checkName(baseElement) + "' not allowed",
-                    issues.iterator().next().getMessage());
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("collection with the issues is bigger or smaller as expected");
+		} else {
+			Assert.assertEquals("ScriptTask '" + CheckName.checkName(baseElement) + "' not allowed",
+					issues.iterator().next().getMessage());
+		}
+	}
 }
