@@ -36,6 +36,7 @@ import de.viadee.bpm.vPAV.RuntimeConfig;
 import de.viadee.bpm.vPAV.config.model.Rule;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
 import de.viadee.bpm.vPAV.processing.code.flow.ControlFlowGraph;
+import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
 import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
@@ -60,83 +61,79 @@ import java.util.Collection;
  */
 public class SignalEventCheckerTest {
 
-    private static final String BASE_PATH = "src/test/resources/";
+	private static final String BASE_PATH = "src/test/resources/";
 
-    private static SignalEventChecker checker;
+	private static SignalEventChecker checker;
 
-    private final Rule rule = new Rule("SignalEventChecker", true, null, null, null, null);
+	private final Rule rule = new Rule("SignalEventChecker", true, null, null, null, null);
 
-    @BeforeClass
-    public static void setup() throws MalformedURLException {
-        final File file = new File(".");
-        final String currentPath = file.toURI().toURL().toString();
-        final URL classUrl = new URL(currentPath + "src/test/java");
-        final URL[] classUrls = { classUrl };
-        ClassLoader cl = new URLClassLoader(classUrls);
-        RuntimeConfig.getInstance().setClassLoader(cl);
-        RuntimeConfig.getInstance().getResource("en_US");
-    }
+	@BeforeClass
+	public static void setup() throws MalformedURLException {
+		final File file = new File(".");
+		final String currentPath = file.toURI().toURL().toString();
+		final URL classUrl = new URL(currentPath + "src/test/java");
+		final URL[] classUrls = { classUrl };
+		ClassLoader cl = new URLClassLoader(classUrls);
+		RuntimeConfig.getInstance().setClassLoader(cl);
+		RuntimeConfig.getInstance().getResource("en_US");
+	}
 
-    /**
-     * Case: Tasks without Expressions
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     */
-    @Test
-    public void testCorrectModel()
-            throws ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "SignalEventChecker_Correct.bpmn";
-        checker = new SignalEventChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Tasks without Expressions
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 */
+	@Test
+	public void testCorrectModel() throws ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "SignalEventChecker_Correct.bpmn";
+		checker = new SignalEventChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<>();
+		final Collection<CheckerIssue> issues = new ArrayList<>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() > 0) {
-            Assert.fail("correct model generates an issue");
-        }
-    }
+		if (issues.size() > 0) {
+			Assert.fail("correct model generates an issue");
+		}
+	}
 
-    /**
-     * Case: Multiple SignalStartEvents with the same signal name
-     *
-     * @throws IOException
-     * @throws SAXException
-     * @throws ParserConfigurationException
-     */
-    @Test
-    public void testWrongModel()
-            throws ParserConfigurationException, SAXException, IOException {
-        final String PATH = BASE_PATH + "SignalEventChecker_Wrong.bpmn";
-        checker = new SignalEventChecker(rule, new BpmnScanner(PATH));
+	/**
+	 * Case: Multiple SignalStartEvents with the same signal name
+	 *
+	 * @throws IOException
+	 * @throws SAXException
+	 * @throws ParserConfigurationException
+	 */
+	@Test
+	public void testWrongModel() throws ParserConfigurationException, SAXException, IOException {
+		final String PATH = BASE_PATH + "SignalEventChecker_Wrong.bpmn";
+		checker = new SignalEventChecker(rule, new BpmnScanner(PATH));
 
-        final Collection<CheckerIssue> issues = new ArrayList<>();
+		final Collection<CheckerIssue> issues = new ArrayList<>();
 
-        // parse bpmn model
-        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+		// parse bpmn model
+		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-        final Collection<BaseElement> baseElements = modelInstance
-                .getModelElementsByType(BaseElement.class);
+		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-        for (BaseElement baseElement : baseElements) {
-            final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph());
-            issues.addAll(checker.check(element));
-        }
+		for (BaseElement baseElement : baseElements) {
+			final BpmnElement element = new BpmnElement(PATH, baseElement, new ControlFlowGraph(), new FlowAnalysis());
+			issues.addAll(checker.check(element));
+		}
 
-        if (issues.size() != 1) {
-            Assert.fail("incorrect model should generate an issue");
-        }
-    }
+		if (issues.size() != 1) {
+			Assert.fail("incorrect model should generate an issue");
+		}
+	}
 
 }
